# leadV3

./: .gitignore  Cargo.toml  README.md  cornell_box.xml  display_plane.xml  output.ppm  sample_scene.xml
outputs/: color_cornell_empty.xml  direct_cornell.xml  direct_monkey.xml  direct_monkeys.xml  normal_monkeys.xml  path_cornell_empty.xml  path_cornell_glass.xml  path_cornell_meshes.xml  path_cornell_mirror.xml  volume_cornell.xml  volume_cornell_glass_media.xml  volume_cornell_monkey.xml  volume_cornell_tornado.xml  volume_display_cloud.xml  volume_display_devil.xml
outputs/resources/: monkey.vdb
src/: loader.rs  main.rs  registry.rs
src/camera/: mod.rs  orthographic.rs  perspective.rs
src/core/: bounds.rs  bsdf.rs  bssrdf.rs  bxdf.rs  camera.rs  distribution.rs  film.rs  filter.rs  geometry.rs  image.rs  integrator.rs  interaction.rs  lead_instance.rs  light.rs  material.rs  math.rs  medium.rs  mod.rs  primitive.rs  random.rs  sampler.rs  scene.rs  shape.rs  spectrum.rs  texture.rs
src/filter/: box_filter.rs  mod.rs  triangle_filter.rs
src/integrator/: color.rs  direct.rs  mod.rs  normal.rs  path.rs  sampler_integrator.rs  sppm.rs  vol_path.rs
src/interaction/: mod.rs  surface_interaction.rs
src/light/: area_light.rs  diffuse_area.rs  diffuse_area_light.rs  directional.rs  mod.rs  point.rs  point_light.rs
src/material/: glass.rs  matte.rs  mirror.rs  mod.rs
src/medium/: heterogeneous.rs  hg_phase.rs  homogeneous.rs  mod.rs
src/reflection/: fresnel.rs  lambertian.rs  mod.rs  specular.rs
src/sampler/: halton.rs  mod.rs  rng.rs  stratified.rs  (+1 more)
(+12 files in other folders)
