[package]
name = "leadV3"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "*"
rand = "*"
tobj = "4"
rand_pcg = "0.9.0"
atomic_float = "0.1"
exr = "1.73"
image = "0.25"
roxmltree = "0.19"
bitflags = "*"
rayon = "1.10"
indicatif = { version = "0.17", features = ["rayon"] }
pyo3 = { version = "0.28", features = ["auto-initialize"] }
